fix(browser): prevent action modal to become too big

--- a/browser-extension/src/action.css
+++ b/browser-extension/src/action.css
@@ -10,6 +10,11 @@
   padding: 0.5rem;
 }
 
+#article-container,
+#feed-container {
+  max-width: 300px;
+}
+
 #action-selector-container {
   max-width: 300px;
   padding: 0.5rem;
